--- a/GPUScraper.UI/wwwroot/css/app.css
+++ b/GPUScraper.UI/wwwroot/css/app.css
@@ -1,4 +1,5 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://api.iconify.design/oi/data-transfer-download.svg');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
