--- a/GPUScraper.UI/Shared/NavMenu.razor
+++ b/GPUScraper.UI/Shared/NavMenu.razor
@@ -1,44 +1,18 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">GPU Scraper</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+﻿    <div class="top">
+        <p class="navbar-brand">GPU Scraper</p>
+@*        dodaj ikonkę aplikacji*@
+        <nav class="navigation-bar">
+        <a class="menu-link" href="/">
+            <span class="oi oi-home" aria-hidden="true"></span> Strona Główna
+        </a>
+        <a class="menu-link" href="api/account">
+            <span class="oi oi-account-login" aria-hidden="true"></span> Konto
+        </a>
+        <a class="menu-link" href="api/scraper">
+            <span class="oi oi-list-rich" aria-hidden="true"></span> Scraper
+        </a>
+        <a class="menu-link" href="api/json">
+            <span class="oi oi-data-transfer-download" aria-hidden="true"></span> JSON
+        </a>
+        </nav>
     </div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Strona Główna
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="api/account">
-                <span class="oi oi-account-login" aria-hidden="true"></span> Konto
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="api/scraper">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Scraper
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="api/json">
-                <span class="oi oi-data-transfer-download" aria-hidden="true"></span> JSON
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
