--- a/GPUScraper.UI/Shared/NavMenu.razor.css
+++ b/GPUScraper.UI/Shared/NavMenu.razor.css
@@ -1,29 +1,70 @@
 .navbar-toggler {
+    display: none;
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+nav{
+    height: 20%;
+    min-height: 100px;
+}
+
+.top {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.navigation-bar {
+    display: flex;
+    margin-right: 1rem;
+    justify-content: flex-end;
+    width: 100%;
+    gap: 20px;
 }
 
 .navbar-brand {
-    font-size: 1.1rem;
+    position: absolute;
+    display:block;
+    top: 20px;
+    left: 20px;
+    margin: 10px 20px;
+    font-size: 1.5rem;
+    color: white;
+
+    transition:0.7s;
+}
+
+.navbar-brand:hover{
+    color:orange;
+    transform:rotate(-10deg);
 }
 
 .oi {
-    width: 2rem;
+    width: 1.5rem;
     font-size: 1.1rem;
     vertical-align: text-top;
     top: -2px;
 }
 
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+.menu-link {
+    display: inline-block;
+    height: 30%;
+    font-size: 20px;
+    padding-bottom: 5px;
+    color: white;
+    text-decoration: none;
+
+    transition: 0.4s;
 }
 
-    .nav-item:first-of-type {
+.menu-link:hover{
+    color:orange;
+    box-shadow: 0px 3px 0px white;
+}
+
+    /*.nav-item:first-of-type {
         padding-top: 1rem;
     }
 
@@ -48,15 +89,9 @@
         .nav-item ::deep a:hover {
             background-color: rgba(255,255,255,0.1);
             color: white;
-        }
+        }*/
 
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
+@media (max-width: 740px)
+{
+    
 }
