--- a/GPUScraper.UI/Pages/Account.razor
+++ b/GPUScraper.UI/Pages/Account.razor
@@ -9,7 +9,10 @@
         <h3 class="login-header">Panel logowania</h3>
         <input type="email" class="login-email" placeholder="Wprowadź adres e-mail" />
         <input type="password" class="login-password" placeholder="Wprowadź hasło" />
+    </div>
+    <div class="buttons">
         <button type="button" class="login-btn" onclick=""> Zaloguj się </button>
+        <button type="button" class="register-btn" onclick=""> Zarejestruj się </button>
     </div>
 }
 else
