--- a/GPUScraper.UI/Pages/Index.razor
+++ b/GPUScraper.UI/Pages/Index.razor
@@ -2,11 +2,12 @@
 
 <PageTitle>GPU Scraper by Jacek Fedorowicz</PageTitle>
 
-@*<h3 class="index-header">
+<h3 class="index-header">
     <p class="greeting"> GPU Scraper </p>
-</h3>*@
+</h3>
 
 <div class="about-project">
+    <h4>O projekcie</h4>
     <p>
         Projekt powstał w ramach nauki programowania w języku <span>C#</span>  oraz frameworku <span>ASP.NET</span> w oparciu o model <span>MVC</span>. Aplikacja pozwala na pobranie cen kart graficznych z dwóch popularnych polskich sklepów internetowych jakimi są
         <a href="https://www.x-kom.pl" target="_blank">X-Kom</a> oraz <a href="https://www.morele.net" target="_blank">Morele</a>.
