--- a/GPUScraper.UI/Shared/NavMenu.razor
+++ b/GPUScraper.UI/Shared/NavMenu.razor
@@ -1,18 +1,21 @@
 ﻿    <div class="top">
         <p class="navbar-brand">GPU Scraper</p>
-@*        dodaj ikonkę aplikacji*@
         <nav class="navigation-bar">
-        <a class="menu-link" href="/">
-            <span class="oi oi-home" aria-hidden="true"></span> Strona Główna
-        </a>
-        <a class="menu-link" href="api/account">
-            <span class="oi oi-account-login" aria-hidden="true"></span> Konto
-        </a>
-        <a class="menu-link" href="api/scraper">
-            <span class="oi oi-list-rich" aria-hidden="true"></span> Scraper
-        </a>
-        <a class="menu-link" href="api/json">
-            <span class="oi oi-data-transfer-download" aria-hidden="true"></span> JSON
-        </a>
+                <div class="navigation-links">
+                    
+                    <a class="menu-link" href="/">
+                        <span class="oi oi-home" aria-hidden="true"></span> Strona Główna
+                    </a>
+                    <a class="menu-link" href="api/account">
+                        <span class="oi oi-account-login" aria-hidden="true"></span> Konto
+                    </a>
+                    <a class="menu-link" href="api/scraper">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Scraper
+                    </a>
+                    <a class="menu-link" href="api/json">
+                        <span class="oi oi-data-transfer-download" aria-hidden="true"></span> JSON
+                    </a>
+                </div>
         </nav>
     </div>
+
