--- a/GPUScraper.UI/Pages/Account.razor.css
+++ b/GPUScraper.UI/Pages/Account.razor.css
@@ -1,7 +1,7 @@
 ﻿.login-header {
     position: center;
     display: block;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     text-align: center;
     font-size: 36px;
 }
@@ -19,26 +19,29 @@ input {
     min-height: 40px;
 }
 
-.login-email {
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 6vw;
 }
 
-..login-password {
-}
-
-
-.login-btn {
+.login-btn, .register-btn {
     display: inline-block;
     margin-top: 30px;
-    margin-left: 95px;
-    width: 100px;
+    width: 130px;
     height: 30px;
     border-radius: 20px;
     border: none;
-    color: white;
+    color: black;
     background-color: darkgray;
-    transition: 0.5s;
+    transition: 0.4s ease-in;
 }
 
-    .login-btn:hover {
+    .login-btn:hover, .register-btn:hover {
+        color: white;
         background-color: #3a0647;
     }
