--- a/GPUScraper.UI/Pages/Scraper.razor.css
+++ b/GPUScraper.UI/Pages/Scraper.razor.css
@@ -11,24 +11,35 @@ main
 
 }
 
-.mainTitle
-{
-    padding: 10px 20px;
+.scraper-header {
     display: block;
-    position: relative;
-
-    color:red;
-
+    padding: 40px 40px;
+    text-align: center;
+    color: black;
 }
 
-.btn-crawl
-{
-
+.scraper-header > span{
+    color: red;
 }
-.btn-crawl:hover 
-{
 
+.btn-crawl {
+    position: fixed;
+    display: block;
+    top: 50vh;
+    left: 50vw;
+    width: 125px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    border-radius: 25px;
+    font-size: 22px;
+    background-color: gray;
+    border: none;
+    transition: 0.4s ease-in;
 }
+    .btn-crawl:hover {
+        color: white;
+        background-color: #3a0647;
+    }
 
 
 /*position
