--- a/GPUScraper.UI/Shared/NavMenu.razor.css
+++ b/GPUScraper.UI/Shared/NavMenu.razor.css
@@ -1,10 +1,6 @@
-.navbar-toggler {
-    display: none;
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
 nav{
-    height: 20%;
+    position:relative;
+    height: 10%;
     min-height: 100px;
 }
 
@@ -12,33 +8,7 @@ nav{
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    margin-top: 20px;
     width: 100%;
-}
-
-.navigation-bar {
-    display: flex;
-    margin-right: 1rem;
-    justify-content: flex-end;
-    width: 100%;
-    gap: 20px;
-}
-
-.navbar-brand {
-    position: absolute;
-    display:block;
-    top: 20px;
-    left: 20px;
-    margin: 10px 20px;
-    font-size: 1.5rem;
-    color: white;
-
-    transition:0.7s;
-}
-
-.navbar-brand:hover{
-    color:orange;
-    transform:rotate(-10deg);
 }
 
 .oi {
@@ -48,6 +18,49 @@ nav{
     top: -2px;
 }
 
+.navbar-brand {
+    position: absolute;
+    display: block;
+    top: 0px;
+    left: 20px;
+    margin: 10px 20px;
+    font-size: 1.5rem;
+    color: white;
+    z-index:1;
+    transition: 0.7s;
+}
+
+.navbar-brand:hover {
+    color: orange;
+    transform: rotate(-10deg);
+}
+
+.navigation-toggler {
+    position: absolute;
+    display: none;
+    top: 15px;
+    right: 10px;
+    border: none;
+    background: none;
+    outline: none;
+    color: white;
+}
+
+.navigation-bar {
+    position:relative;
+    display: flex;
+}
+
+.navigation-links {
+    display: flex;
+    position:relative;
+    margin-right: 1rem;
+    padding-top: 20px;
+    justify-content: flex-end;
+    width: 100%;
+    gap: 20px;
+}
+
 .menu-link {
     display: inline-block;
     height: 30%;
@@ -55,43 +68,17 @@ nav{
     padding-bottom: 5px;
     color: white;
     text-decoration: none;
-
-    transition: 0.4s;
+    transition: 0.4s ease;
 }
 
-.menu-link:hover{
-    color:orange;
-    box-shadow: 0px 3px 0px white;
-}
-
-    /*.nav-item:first-of-type {
-        padding-top: 1rem;
+    .menu-link:hover {
+        color: orange;
+        box-shadow: 0px 1.5px 0px white;
     }
 
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
+@media (max-width:720px) {
+
+    .navigation-links {
+        display: none;
     }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-        .nav-item ::deep a.active {
-            background-color: rgba(255,255,255,0.25);
-            color: white;
-        }
-
-        .nav-item ::deep a:hover {
-            background-color: rgba(255,255,255,0.1);
-            color: white;
-        }*/
-
-@media (max-width: 740px)
-{
-    
 }
